tests/rosetta/transpiler/erl/fivenum-1.error
exit status 127
escript: exception error: no function clause matching 
                 lists:nth(2.25,[7,15,36,39,40,41]) (lists.erl, line 297)
  in function  main:fivenum/1 (/workspace/mochi/tests/rosetta/transpiler/erl/fivenum-1.erl, line 78)
  in call from main:main/1 (/workspace/mochi/tests/rosetta/transpiler/erl/fivenum-1.erl, line 90)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
  in call from init:do_boot/3 
